tests/sksl/errors/InterfaceBlockPrivateType.glsl
### Compilation failed:

error: 2: type '$mat' is private
1 error
